--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "quiz-game",
+  "homepage": "https://regan-mu.github.io/enabler",
   "private": true,
   "version": "0.0.0",
   "type": "module",
